--- a/apps/drec-angular-ui/src/app/view/device/edit-device/edit-device.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/edit-device/edit-device.component.html
@@ -70,7 +70,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">project Name</mat-label>
                                     <input matInput autocomplete="off" placeholder="projectName"
-                                        formControlName='projectName' [ngModel]="projectName">
+                                        formControlName='projectName' [(ngModel)]="projectName">
                                     <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                     <!-- <mat-hint>Hint</mat-hint> -->
                                 </mat-form-field>
@@ -80,7 +80,7 @@
                             <div class="col-md-3">
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">Select country Code</mat-label>
-                                    <mat-select formControlName='countryCode' [ngModel]="countryCode">
+                                    <mat-select formControlName='countryCode' [(ngModel)]="countryCode">
                                         <mat-option *ngFor="let code of countrylist" [value]="code.alpha3">
                                             {{code.country}}
                                         </mat-option>
@@ -104,7 +104,7 @@
                                     <mat-label class="text-capitalize">commissioning Date</mat-label>
                                     <input matInput [ngxMatDatetimePicker]="picker" placeholder="Choose a date"
                                         formControlName="commissioningDate" [max]="maxDate"
-                                        [ngModel]="commissioningDate">
+                                        [(ngModel)]="commissioningDate">
                                     <mat-datepicker-toggle matSuffix [for]="$any(picker)"></mat-datepicker-toggle>
                                     <ngx-mat-datetime-picker #picker [showSpinners]="true" [showSeconds]="false"
                                         [stepHour]="1" [stepMinute]="1" [stepSecond]="1" [touchUi]="false"
@@ -117,7 +117,7 @@
                             <div class="col-md-3">
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">capacity</mat-label>
-                                    <input matInput placeholder="capacity" type="number" [ngModel]="capacity"
+                                    <input matInput placeholder="capacity" type="number" [(ngModel)]="capacity"
                                         formControlName='capacity' [min]=1>
                                     <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                     <!-- <mat-hint>Hint</mat-hint> -->
@@ -128,7 +128,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">off Taker</mat-label>
 
-                                    <mat-select formControlName='offTaker' placeholder="offTaker" [ngModel]="offTaker">
+                                    <mat-select formControlName='offTaker' placeholder="offTaker" [(ngModel)]="offTaker">
 
                                         <mat-option *ngFor="let code of offteker" [value]="code">
                                             {{code}}
@@ -141,7 +141,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">Fuel Code</mat-label>
 
-                                    <mat-select formControlName='fuelCode' placeholder="fuelCode" [ngModel]="fuelCode">
+                                    <mat-select formControlName='fuelCode' placeholder="fuelCode" [(ngModel)]="fuelCode">
 
                                         <mat-option *ngFor="let code of fuellist" [value]="code.code">
                                             {{code.name}}
@@ -155,7 +155,7 @@
                                     <mat-label class="text-capitalize">Device Type Code</mat-label>
 
                                     <mat-select formControlName='deviceTypeCode' placeholder="deviceTypeCode"
-                                        [ngModel]="deviceTypeCode">
+                                    [(ngModel)]="deviceTypeCode">
 
                                         <mat-option *ngFor="let code of devicetypelist" [value]="code.code">
                                             {{code.name}}
@@ -169,7 +169,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">impact Story</mat-label>
                                     <input matInput placeholder="impactStory" formControlName='impactStory'
-                                        [ngModel]="impactStory">
+                                    [(ngModel)]="impactStory">
                                 </mat-form-field>
                             </div>
 
@@ -177,7 +177,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">Device Description</mat-label>
 
-                                    <mat-select formControlName='deviceDescription' [ngModel]="deviceDescription"
+                                    <mat-select formControlName='deviceDescription' [(ngModel)]="deviceDescription"
                                         placeholder="deviceDescription">
 
                                         <mat-option *ngFor="let code of devicediscription" [value]="code">
@@ -229,7 +229,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">Address</mat-label>
                                     <input autocomplete="off" matInput placeholder="address" formControlName='address'
-                                        [ngModel]="address">
+                                    [(ngModel)]="address">
                                     <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                     <!-- <mat-hint>Hint</mat-hint> -->
                                 </mat-form-field>
@@ -239,7 +239,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">Latitude</mat-label>
                                     <input matInput placeholder="latitude" formControlName='latitude'
-                                        [ngModel]="latitude">
+                                    [(ngModel)]="latitude">
                                     <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                     <mat-error>please enter the valid value</mat-error>
                                 </mat-form-field>
@@ -249,7 +249,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">longitude</mat-label>
                                     <input matInput placeholder="longitude" formControlName='longitude'
-                                        [ngModel]="longitude">
+                                    [(ngModel)]="longitude">
                                     <!-- <mat-icon matSuffix>sentiment_very_satisfied</mat-icon> -->
                                     <mat-error>please enter the valid value</mat-error>
                                 </mat-form-field>
@@ -260,7 +260,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">Quality Labels</mat-label>
                                     <input matInput placeholder="qualityLabels" formControlName='qualityLabels'
-                                        [ngModel]="qualityLabels">
+                                    [(ngModel)]="qualityLabels">
                                 </mat-form-field>
                             </div>
 
@@ -272,7 +272,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">grid Inter connection</mat-label>
                                     <input matInput placeholder="gridInterconnection"
-                                        formControlName='gridInterconnection' [ngModel]="gridInterconnection">
+                                        formControlName='gridInterconnection' [(ngModel)]="gridInterconnection">
                                 </mat-form-field>
                             </div>
 
@@ -288,12 +288,12 @@
                                             <mat-label class="text-capitalize">Energy Storage</mat-label>
                                            <input matInput placeholder="energyStorage" formControlName='energyStorage'> -->
 
-                                <mat-radio-group formControlName='energyStorage' [ngModel]="energyStorage"
+                                <mat-radio-group formControlName='energyStorage' [(ngModel)]="energyStorage"
                                     (ngModelChange)="showenergycapacity_input($event)">
                                     <span>Energy Storage:</span>
 
-                                    <mat-radio-button [value]=true checked>True</mat-radio-button>
-                                    <mat-radio-button [value]=false>False</mat-radio-button>
+                                    <mat-radio-button [value]=true >Yes</mat-radio-button>
+                                    <mat-radio-button [value]=false>NO</mat-radio-button>
                                 </mat-radio-group>
                                 <!-- </mat-form-field>
                                          -->
@@ -304,7 +304,7 @@
                                 <mat-form-field appearance="outline">
                                     <mat-label class="text-capitalize">Energy Storage Capacity</mat-label>
                                     <input matInput autocomplete="off" placeholder="energyStorageCapacity"
-                                        [ngModel]="energyStorageCapacity" type="number"
+                                    [(ngModel)]="energyStorageCapacity" type="number"
                                         formControlName='energyStorageCapacity'>
                                 </mat-form-field>
                             </div>
