--- a/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
@@ -277,8 +277,8 @@
                                            <mat-radio-group  formControlName='energyStorage' (ngModelChange)="showenergycapacity_input(i,$event)">
                                             <span >Energy Storage:</span>
 
-                                            <mat-radio-button [value]=true checked>True</mat-radio-button>
-                                                <mat-radio-button [value]=false>False</mat-radio-button>
+                                            <mat-radio-button [value]=true >Yes</mat-radio-button>
+                                                <mat-radio-button [value]=false>No</mat-radio-button>
                                             </mat-radio-group>
                                         <!-- </mat-form-field>
                                          -->
