--- a/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
@@ -35,7 +35,7 @@
                     <mat-form-field appearance="outline">
                         <mat-label class="text-capitalize">Start Date </mat-label>
                         <input matInput [ngxMatDatetimePicker]="picker" placeholder="Choose a date"
-                            formControlName="start" autocomplete="off"
+                            formControlName="start" autocomplete="off" (ngModelChange)="onEndChangeEvent($event)"
                             >
                         <mat-datepicker-toggle matSuffix [for]="$any(picker)"></mat-datepicker-toggle>
                         <ngx-mat-datetime-picker #picker [showSpinners]="true" [showSeconds]="false" [stepHour]="1"
@@ -72,6 +72,7 @@
 
             </div>
         </form>
+        <hr>
         <!-- <mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading"></mat-progress-spinner> -->
       <div class="content mat-elevation-z8 text-center" *ngIf="!loading">
         <table mat-table [dataSource]="dataSource" >
@@ -80,12 +81,16 @@
                 <th mat-header-cell *matHeaderCellDef> ID </th>
                 <td mat-cell *matCellDef="let element"> {{element.id}} </td>
               </ng-container> -->
-              <ng-container matColumnDef="timestamp">
-                <th mat-header-cell *matHeaderCellDef> Datetime </th>
-                <td mat-cell *matCellDef="let element"> {{element.timestamp}} </td>
+              <ng-container matColumnDef="startdate">
+                <th mat-header-cell *matHeaderCellDef> Start Datetime </th>
+                <td mat-cell *matCellDef="let element"> {{element.startdate}} </td>
+              </ng-container>
+              <ng-container matColumnDef="enddate">
+                <th mat-header-cell *matHeaderCellDef>End Datetime </th>
+                <td mat-cell *matCellDef="let element"> {{element.enddate}} </td>
               </ng-container>
               <ng-container matColumnDef="value">
-                <th mat-header-cell *matHeaderCellDef> Value </th>
+                <th mat-header-cell *matHeaderCellDef> Value(Wh) </th>
                 <td mat-cell *matCellDef="let element"> {{element.value}} </td>
               </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
