--- a/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
@@ -245,10 +245,14 @@
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity </th>
                                     <td mat-cell *matCellDef="let element"> {{element.capacity}} </td>
                                 </ng-container>
+                                <ng-container matColumnDef="viewread">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header> View Read </th>
+                                    <td mat-cell  *matCellDef="let element; let i=index;">   <a (click)="openBottomSheet(element)"><mat-icon>visibility</mat-icon></a></td>
+                                </ng-container>
 
                                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                                 <tr mat-row *matRowDef="let row; columns: displayedColumns; "
-                                    (click)="selection.toggle(row)">
+                                    >
                                 </tr>
                             </table>
                             <!-- <mat-paginator [pageSize]="pageSize" aria-label="Select page of users"></mat-paginator>
@@ -276,7 +280,7 @@
     </mat-card>
     
 </div>
-<ng-template let-data #myCityDialog class="Position-relative ng-template-add-reservation">
+<ng-template let-data #mypopupDialog class="Position-relative ng-template-add-reservation">
     <h2 mat-dialog-title class="mat-dialog-title"> Reservation</h2>
     <div mat-dialog-content>
         <p>
