--- a/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/all-metereads/all-metereads.component.html
@@ -15,22 +15,33 @@
     </mat-card-header>
     <hr class="mt-0 pt-0">
       
-      <mat-card-content class="mat-body-cont text-center">
+      <mat-card-content class="mat-body-cont text-center" >
 
-        <form [formGroup]="FilterForm">
+        <form [formGroup]="FilterForm" *ngIf="showfilterform">
             <div class="example-container1 row">
-                <div class="col-md-4">
-                    <mat-form-field appearance="outline">
-                        <mat-label class="text-capitalize">exterenalId</mat-label>
-                        <!-- <input [(ngModel)]="exterenalId"  type="text"> -->
-                        <!-- <input matInput placeholder="name" [(ngModel)]="exterenalId" [ngModelOptions]="{standalone: true}"> -->
-                        <mat-select [(ngModel)]="exterenalId" [ngModelOptions]="{standalone: true}">
-                            <mat-option *ngFor="let code of devicedata" [value]="code.externalId">
-                                {{code.externalId}}
-                            </mat-option>
-                        </mat-select>
-                    </mat-form-field>
-                </div>
+              <div class="col-md-4" *ngIf="loginuser.role ==='OrganizationAdmin'">
+                <mat-form-field appearance="outline">
+                    <mat-label class="text-capitalize">exterenalId</mat-label>
+                    <!-- <input [(ngModel)]="exterenalId"  type="text"> -->
+                    <!-- <input matInput placeholder="name" [(ngModel)]="exterenalId" [ngModelOptions]="{standalone: true}"> -->
+                    <mat-select [(ngModel)]="exterenalId" [ngModelOptions]="{standalone: true}">
+                        <mat-option *ngFor="let code of devicedata" [value]="code.externalId">
+                            {{code.externalId}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div><div class="col-md-4" *ngIf="loginuser.role !='OrganizationAdmin'">
+              <mat-form-field appearance="outline">
+                  <mat-label class="text-capitalize">exterenalId</mat-label>
+                  <!-- <input [(ngModel)]="exterenalId"  type="text"> -->
+                  <!-- <input matInput placeholder="name" [(ngModel)]="exterenalId" [ngModelOptions]="{standalone: true}"> -->
+                  <mat-select [(ngModel)]="exterenalId" [ngModelOptions]="{standalone: true}">
+                      <mat-option *ngFor="let code of devicedata" [value]="code.id">
+                          {{code.externalId}}
+                      </mat-option>
+                  </mat-select>
+              </mat-form-field>
+          </div>
                 <div class="col-md-4">
                     <mat-form-field appearance="outline">
                         <mat-label class="text-capitalize">Start Date </mat-label>
@@ -74,33 +85,7 @@
         </form>
         <hr>
         <!-- <mat-progress-spinner [mode]="'indeterminate'" *ngIf="loading"></mat-progress-spinner> -->
-      <div class="content mat-elevation-z8 text-center" *ngIf="!loading">
-        <table mat-table [dataSource]="dataSource" >
-            <!-- columns here -->
-            <!-- <ng-container matColumnDef="id">
-                <th mat-header-cell *matHeaderCellDef> ID </th>
-                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-              </ng-container> -->
-              <ng-container matColumnDef="startdate">
-                <th mat-header-cell *matHeaderCellDef> Start Datetime </th>
-                <td mat-cell *matCellDef="let element"> {{element.startdate}} </td>
-              </ng-container>
-              <ng-container matColumnDef="enddate">
-                <th mat-header-cell *matHeaderCellDef>End Datetime </th>
-                <td mat-cell *matCellDef="let element"> {{element.enddate}} </td>
-              </ng-container>
-              <ng-container matColumnDef="value">
-                <th mat-header-cell *matHeaderCellDef> Value(Wh) </th>
-                <td mat-cell *matCellDef="let element"> {{element.value}} </td>
-              </ng-container>
-            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        
-        <mat-paginator #paginator [length]="totalRows" [pageIndex]="currentPage" [pageSize]="pageSize"
-        [pageSizeOptions]="pageSizeOptions" (page)="pageChangeEvent($event)" aria-label="Select page">
-      </mat-paginator>
-      </div>
+    <app-meter-read-table></app-meter-read-table>
       </mat-card-content>
       <mat-card-footer></mat-card-footer>
     </mat-card>
