ui small changes

--- a/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
+++ b/apps/drec-angular-ui/src/app/nav/sidemenu/sidemenu.component.html
@@ -45,7 +45,7 @@
                 <span>My Devices</span>
               </a> -->
           <a mat-button class="menu-button" routerLinkActive="active" routerLink="/reads/All"
-            *ngIf="loginuser.role ==='OrganizationAdmin'||'Buyer'">
+            *ngIf="loginuser.role ==='OrganizationAdmin'">
             <mat-icon>list</mat-icon>
             <span>All Reads</span>
           </a>
