--- a/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
+++ b/apps/drec-angular-ui/src/app/view/device/add-devices/add-devices.component.html
@@ -255,11 +255,19 @@
 
                                 <div class="example-container1 row" *ngIf="addmoredetals[i]">
                                     <div class="col-md-3">
-                                        <mat-form-field appearance="outline">
+                                        <!-- <mat-form-field appearance="outline">
                                             <mat-label class="text-capitalize">grid Inter connection</mat-label>
                                             <input matInput placeholder="gridInterconnection"
                                                 formControlName='gridInterconnection'>
-                                        </mat-form-field>
+                                        </mat-form-field> -->
+                                        <mat-radio-group  formControlName='gridInterconnection'>
+                                            <span >grid Inter connection:</span>
+
+                                            <mat-radio-button [value]=true >Yes</mat-radio-button>
+                                                <mat-radio-button [value]=false>No</mat-radio-button>
+                                            </mat-radio-group>
+
+
                                     </div>
 
                                     <div class="col-md-3">
