--- a/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/add-reservation/add-reservation.component.html
@@ -96,11 +96,12 @@
                     </div>
 
                 </div>
-              
+
             </form>
             <div class="example-container1  row" style="padding: 10px">
                 <mat-card class="nested-card">
-                    <mat-card-header class="d-flex justify-content-between nested-card-header mat-crd-hide align-items-center">
+                    <mat-card-header
+                        class="d-flex justify-content-between nested-card-header mat-crd-hide align-items-center">
 
                         <div>
                             <h4 class="pb-0 mb-0 fw-bold text-capitalize">select the devices
@@ -109,11 +110,11 @@
 
                     </mat-card-header>
                     <!-- <hr> -->
-                    <mat-card-content class="pt-3" >
+                    <mat-card-content class="pt-3">
                         <h3>Use filters to select devices </h3>
                         <form [formGroup]="FilterForm">
                             <div class="example-container1 row">
-                                <div class="col-md-3">
+                                <!-- <div class="col-md-3">
                                     <mat-form-field>
                                         <mat-label class="text-capitalize">Select country Code</mat-label>
                                         <mat-select formControlName='countryCode'>
@@ -121,6 +122,18 @@
                                                 {{code.country}}
                                             </mat-option>
                                         </mat-select>
+                                    </mat-form-field>
+                                </div> -->
+                                <div class="col-md-3">
+                                    <mat-form-field >
+                                        <mat-label class="text-capitalize">Select country Code</mat-label>
+                                        <input type="text" placeholder="Please Enter countryCode" aria-label="text"
+                                            matInput formControlName="countryCode" [matAutocomplete]="auto" >
+                                        <mat-autocomplete #auto="matAutocomplete">
+                                            <mat-option *ngFor="let code of filteredOptions | async" [value]="code.alpha3">
+                                                {{code.country}}
+                                            </mat-option>
+                                        </mat-autocomplete>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-md-3">
@@ -162,7 +175,7 @@
                                 </div>
                                 <div class="col-md-3">
                                     <mat-form-field>
-                                        <mat-label>capacity</mat-label>
+                                        <mat-label>capacity(Kw)</mat-label>
                                         <input matInput placeholder="Search" formControlName='capacity' #input>
                                     </mat-form-field>
                                 </div>
@@ -175,10 +188,10 @@
                                         <button class="btn-primary btn text-capitalize px-4"
                                             (click)="reset()">Reset</button>
                                     </div>
-    
+
 
                                 </div>
-                               
+
                             </div>
                         </form>
                         <div class="content mat-elevation-z8 text-center" *ngIf="loading">
@@ -219,7 +232,7 @@
                                 <!-- Position Column -->
                                 <ng-container matColumnDef="onboarding_date">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> OnBoarding Date </th>
-                                    <td mat-cell *matCellDef="let row;let i=index"> {{row.createdAt| date:'EEE d MMMyyyy hh:mm:ss'}} </td>
+                                    <td mat-cell *matCellDef="let row;let i=index"> {{row.createdAt| date:'EEE d MMMyyyyhh:mm:ss'}} </td>
                                 </ng-container>
                                 <ng-container matColumnDef="projectName">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> projectName </th>
@@ -242,24 +255,23 @@
                                 </ng-container>
                                 <!-- Status Column -->
                                 <ng-container matColumnDef="status">
-                                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity </th>
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Capacity(Kw) </th>
                                     <td mat-cell *matCellDef="let element"> {{element.capacity}} </td>
                                 </ng-container>
                                 <ng-container matColumnDef="viewread">
                                     <th mat-header-cell *matHeaderCellDef mat-sort-header> View Read </th>
-                                    <td mat-cell  *matCellDef="let element; let i=index;">   <a (click)="openBottomSheet(element)"><mat-icon>visibility</mat-icon></a></td>
+                                    <td mat-cell *matCellDef="let element; let i=index;"> <a
+                                            (click)="openBottomSheet(element)"><mat-icon>visibility</mat-icon></a></td>
                                 </ng-container>
 
                                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                                <tr mat-row *matRowDef="let row; columns: displayedColumns; "
-                                    >
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns; ">
                                 </tr>
                             </table>
                             <!-- <mat-paginator [pageSize]="pageSize" aria-label="Select page of users"></mat-paginator>
                          -->
-                            <mat-paginator #paginator   [pageSize]="pageSize"
-                             aria-label="Select page">
-                          </mat-paginator>
+                            <mat-paginator #paginator [pageSize]="pageSize" aria-label="Select page">
+                            </mat-paginator>
                         </div>
                     </mat-card-content>
                 </mat-card>
@@ -278,36 +290,37 @@
         </mat-card-footer>
 
     </mat-card>
-    
+
 </div>
 <ng-template let-data #mypopupDialog class="Position-relative ng-template-add-reservation">
     <h2 mat-dialog-title class="mat-dialog-title"> Reservation</h2>
     <div mat-dialog-content>
         <p>
-            <mat-radio-group
-            [(ngModel)]="data.continewwithunavilableonedevice">
-                            <span>Continue reservation if some devices are unavailable:</span>
-                            <br>
-                            <mat-radio-button [value]=true checked>Yes</mat-radio-button>
-                            <mat-radio-button [value]=false>No</mat-radio-button>
-                        </mat-radio-group>
+            <mat-radio-group [(ngModel)]="data.continewwithunavilableonedevice">
+                <span>Continue reservation if some devices are unavailable:</span>
+                <br>
+                <mat-radio-button [value]=true checked>Yes</mat-radio-button>
+                <mat-radio-button [value]=false>No</mat-radio-button>
+            </mat-radio-group>
 
-          </p>
-      <p>
-       
-        <mat-radio-group [(ngModel)]="data.continueWithTCLessDTC">
-            <span class="dialog-popup-discription">Continue reservation if target capacity is less than estimated reachable
-                capacity of devices between selected period:</span>
-            <br>
-            <mat-radio-button [value]=true checked>Yes</mat-radio-button>
-            <mat-radio-button [value]=false>No</mat-radio-button>
-        </mat-radio-group>
-      </p>
-      
+        </p>
+        <p>
+
+            <mat-radio-group [(ngModel)]="data.continueWithTCLessDTC">
+                <span class="dialog-popup-discription">Continue reservation if target capacity is less than estimated
+                    reachable
+                    capacity of devices between selected period:</span>
+                <br>
+                <mat-radio-button [value]=true checked>Yes</mat-radio-button>
+                <mat-radio-button [value]=false>No</mat-radio-button>
+            </mat-radio-group>
+        </p>
+
     </div>
     <div mat-dialog-actions class=" continue-button">
         <!-- <button mat-button (click)="onContinue()">Continue</button> -->
-        <button mat-button [mat-dialog-close]="data" class="btn-primary btn text-capitalize" cdkFocusInitial>Continue</button>
+        <button mat-button [mat-dialog-close]="data" class="btn-primary btn text-capitalize"
+            cdkFocusInitial>Continue</button>
     </div>
-   
-  </ng-template>
+
+</ng-template>
