--- a/apps/drec-angular-ui/src/app/view/meter-read/meter-read-table/meter-read-table.component.html
+++ b/apps/drec-angular-ui/src/app/view/meter-read/meter-read-table/meter-read-table.component.html
@@ -18,10 +18,14 @@
             <th mat-header-cell *matHeaderCellDef> Value(Wh) </th>
             <td mat-cell *matCellDef="let element"> {{element.value}} </td>
         </ng-container>
+        <ng-container matColumnDef="ReadType">
+            <th mat-header-cell *matHeaderCellDef>Read Type </th>
+            <td mat-cell *matCellDef="let element"  [style.color]="element.color"> {{element.readtype}} </td>
+        </ng-container>
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No data found</td>
+            <td class="mat-cell" colspan="4">No data found in Ongoing</td>
         </tr>
     </table>
 
