--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -121,7 +121,7 @@
                             <div class="col-md-6">
 
                                 <mat-radio-group formControlName='reservationActive'>
-                                    <span>grid Inter connection:</span>
+                                    <span>Reservation Status:</span>
 
                                     <mat-radio-button value="All">All</mat-radio-button>
                                     <mat-radio-button value="Active">Active</mat-radio-button>
