change deviceid to externalId

--- a/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
+++ b/apps/drec-angular-ui/src/app/view/certificate/certificate.component.html
@@ -237,9 +237,9 @@
 											{{element.certificate_issuance_enddate}}</td>
 									</ng-container>
 
-									<ng-container matColumnDef="deviceid">
+									<ng-container matColumnDef="externalId">
 										<th mat-header-cell *matHeaderCellDef> Device Name </th>
-										<td mat-cell *matCellDef="let element" class="table-data"> {{element.deviceid }}
+										<td mat-cell *matCellDef="let element" class="table-data"> {{element.externalId }}
 										</td>
 									</ng-container>
 									<ng-container matColumnDef="readvalue_watthour">
