new chane in certificate ui page

--- a/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
+++ b/apps/drec-angular-ui/src/app/view/myreservation/myreservation.component.html
@@ -228,7 +228,7 @@
                                 aria-label="Button that displays a tooltip when focused or hovered over">visibility</mat-icon></a> -->
                             <a matTooltip="Certificate" [matTooltipPosition]="'left'"
                                 aria-label="Button that displays a tooltip when focused or hovered over"
-                                [routerLink]="['/certificate']" [queryParams]="{id: row.devicegroup_uid,name:row.name,devices:row.deviceIds}">
+                                (click)="DisplayCertificatepage(row)">
                                 <mat-icon class="fs-6 mt-2">card_membership</mat-icon></a>
                             &nbsp;&nbsp;
                             <a matTooltip="Devices" [matTooltipPosition]="'above'"
